--- a/public/nowplaying.html
+++ b/public/nowplaying.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Roon 网页控制器 - 正在播放</title>
+    <title>Music will keep us alive</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
