--- a/public/nowplaying.html
+++ b/public/nowplaying.html
@@ -350,6 +350,29 @@
       #isPlaying {
         min-height: 100vh;
       }
+
+      /* 移除滚动条 */
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 100vh;
+        width: 100vw;
+      }
+
+      html {
+        overflow: hidden;
+      }
+
+      /* 确保所有内容都在视口内 */
+      #coverBackground,
+      #colorBackground {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
